Bug 1152093 - Perform case-insensitive comparisons for codec types. r=jesup, a=sledru